--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cordova-jida-local-webserver",
+  "name": "cordova-plugin-jida-local-webserver",
   "version": "2.4.0",
   "description": "Cordova Jida Local Web Server Plugin",
   "cordova": {
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jR0driguez/cordova-local-webserver",
+    "url": "https://github.com/jR0driguez/cordova-plugin-jida-localwebserver.git"
   },
   "keywords": [
     "cordova",
@@ -26,7 +26,7 @@
   ],
   "author": "",
   "license": "Apache-2.0",
-  "homepage": "https://github.com/jR0driguez/cordova-local-webserver#readme",
+  "homepage": "https://github.com/jR0driguez/cordova-plugin-jida-localwebserver.git#readme",
   "dependencies": {
     "urijs": "^1.17.1"
   }
